cmake_minimum_required(VERSION 2.8.3)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
find_package(libelf REQUIRED)
set(LIBELF_REQUIRED_INTERNAL_HEADERS
  gelf.h)
include(CheckHeaderExists)
foreach(HEADER ${LIBELF_REQUIRED_INTERNAL_HEADERS})
  CHECK_HEADER_EXISTS(${HEADER} HEADER_DIR REQUIRED PATHS $ENV{LIBELF_HOME}
    $ENV{LIBELF_ROOT} PATH_SUFFIXES include)
  unset(HEADER_DIR)
endforeach(HEADER)